<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Schedule">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:text="@string/Cancel"
        android:id="@+id/button"
        android:layout_gravity="left|bottom" />

    <Button
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:text="@string/Done"
        android:id="@+id/button2"
        android:layout_gravity="right|bottom" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="left|top"
        android:id="@+id/fragmentcalender">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="@string/Event"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/editText2"
            android:inputType="text"
            android:hint="@string/Class" />

        <EditText
            android:layout_width="143dp"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText7"
            android:hint="@string/Date"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <EditText
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText3"
            android:hint="@string/Time"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/editText4"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Alarm"
            android:id="@+id/textView5" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/editText5"
            android:hint="@string/appointmentdate"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="time"
            android:ems="10"
            android:id="@+id/editText6"
            android:hint="@string/appointmenttime"
            android:focusable="false"
            android:focusableInTouchMode="false" />

    </LinearLayout>
</FrameLayout>
