<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TeacherActivity"
    android:id="@+id/layout"
    android:weightSum="1">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/grid">

        <ImageButton
            android:layout_width="190dp"
            android:layout_height="162dp"
            android:id="@+id/imageButton"
            android:layout_row="0"
            android:layout_column="0"
            android:src="@drawable/cale2"
            android:contentDescription="@string/planner" />

        <ImageButton
            android:layout_width="190dp"
            android:layout_height="162dp"
            android:id="@+id/imageButton2"
            android:layout_row="0"
            android:layout_column="3"
            android:contentDescription="@string/answers"
            android:src="@drawable/chalky" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dayplanner"
            android:id="@+id/textView"
            android:layout_row="1"
            android:layout_column="0"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacherarea"
            android:id="@+id/textView2"
            android:layout_row="1"
            android:layout_column="3"
            android:clickable="false" />

        <ImageButton
            android:layout_width="190dp"
            android:layout_height="165dp"
            android:id="@+id/worktodo"
            android:layout_row="2"
            android:layout_column="0"
            android:src="@android:drawable/ic_menu_edit" />

        <ImageButton
            android:layout_width="190dp"
            android:layout_height="161dp"
            android:id="@+id/img4"
            android:layout_row="2"
            android:layout_column="3"
            android:src="@android:drawable/ic_menu_add" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Student Progress"
            android:id="@+id/m"
            android:layout_row="3"
            android:layout_column="0"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Student"
            android:id="@+id/add"
            android:layout_row="3"
            android:layout_column="3"
            android:gravity="center" />

    </GridLayout>
</LinearLayout>